[workspace]

resolver = "2"

members = ["dawnstore-api", "dawnstore-cli", "dawnstore-client-lib", "dawnstore-core", "dawnstore-lib"]

[workspace.dependencies]
thiserror = { version = "2.0.17" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.149" }
color-eyre = { version = "0.6.5" }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8" }
tracing = { version = "0" }
schemars = { version = "1.2.0" }
jsonschema = { version = "0.38" }
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls-ring-webpki",
  "json",
  "uuid",
  "chrono",
] }
